Fix table alignment bug Reorder log insert calls

--- a/src/NUSMed-WebApp/Content/Site.css
+++ b/src/NUSMed-WebApp/Content/Site.css
@@ -209,7 +209,7 @@ a.aspNetDisabled.btn.btn-secondary.disabled {
     }
 
         .pagination-gridview table > tbody > tr > td {
-            display: inline;
+            display: inline-table;
             border-top: none;
         }
 
